--- a/.travis.yml
+++ b/.travis.yml
@@ -35,4 +35,4 @@ after_success:
     - git add -A
     - git commit -m "Auto Update by Travis-CI"
     - echo git push --force "https://${GH_TOKEN}@${GH_REF}" master:${P_BRANCH}
-    - git push --force "https://${GH_TOKEN}@${GH_REF}" master
+	- git push --force "https://${GH_TOKEN}@${GH_REF}" master:${P_BRANCH}
