--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "directories": {
-    "doc": "docs"
+    "doc": "."
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -13,6 +13,6 @@
     "deploy": "bash deploy.sh"
   },
   "keywords": [],
-  "author": "",
+  "author": "Dean",
   "license": "ISC"
 }
