--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -9,7 +9,7 @@ jobs:
 
     strategy:
       matrix:
-        node-version: [8.x, 10.x, 12.x]
+        node-version: [10.x, 12.x]
 
     steps:
     - uses: actions/checkout@v1
@@ -22,7 +22,6 @@ jobs:
         npm install -g vuepress
         npm install
         npm run build --if-present
-        npm test
         cp favicon.ico ./.vuepress/dist
         cd ./.vuepress/dist
         echo 'www.airdb.com' > CNAME
