--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -30,6 +30,6 @@ jobs:
         git config user.email "git-bot@airdb.com"
         git add -A
         git commit -m "Auto Update by actions"
-        git clone https://airdb-bot:${{ secrets.GithubBotToken }}@github.com/airdb/airdb.github.io --branch=gh-pages gh-pages
+        git push https://airdb-bot:${{ secrets.GithubBotToken }}@github.com/airdb/airdb.github.io --branch=gh-pages gh-pages
       env:
         CI: true
