--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -27,7 +27,7 @@ jobs:
         git init
         git config user.name "airdb-bot"
         git config user.email "git-bot@airdb.com"
-        git remote add origin https://airdb-bot:${{ secrets.GithubBotToken }}@github.com/airdb/airdb.github.io
+        # git remote add origin https://airdb-bot:${{ secrets.GithubBotToken }}@github.com/airdb/airdb.github.io
         git add -A
         git commit -m "Auto Update by actions"
         echo git push --force "https://${{ secrets.GithubBotToken }}@github.com/airdb/airdb.github.io" master
